// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App components should render ListMovies component 1`] = `
<div
  className="App"
>
  <NavBar />
  <ListMovies />
  <Pagination />
</div>
`;

exports[`should render App components should render NavBar, Description, Pagination components 1`] = `
<div
  className="App"
>
  <NavBar />
  <Description
    changeMovie={false}
  />
  <Pagination />
</div>
`;
